--- a/index.html
+++ b/index.html
@@ -16,6 +16,20 @@
       height: 1px;
       overflow: hidden;
     }
+    .checkbox-group {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 0rem 1rem;
+    }
+    .checkbox-group label {
+      display: flex;
+      align-items: center;
+    }
+    .checkbox-group input[type="checkbox"] {
+      margin-right: 0.5rem; /* Adjust spacing as needed */
+    }
+
+
   </style>
 </head>
 <body>
@@ -102,17 +116,17 @@
       return header;
     }
 
-    function createCheckbox(inputVal, text, container){
+    function createCheckbox(value, container, addBreak){
       const input = document.createElement('input');
       input.type = 'checkbox';
-      input.value = inputVal;
+      input.value = value;
 
       const label = document.createElement('label');
       label.appendChild(input);
-      label.appendChild(document.createTextNode(' ' + text));
+      label.appendChild(document.createTextNode(' ' + value));
 
       container.appendChild(label);
-      container.appendChild(document.createElement('br'));
+      if (addBreak) container.appendChild(document.createElement('br'));
 
       return input;
     }
@@ -126,9 +140,12 @@
             part.charAt(0).toUpperCase() + part.slice(1),
             false)
           );
+        const groupDiv = document.createElement('div');
+        groupDiv.className = 'checkbox-group';
+        sensationsContainer.appendChild(groupDiv);
 
         partSensations[part].forEach(sensation => {
-          createCheckbox(sensation, sensation, sensationsContainer);
+          createCheckbox(sensation, groupDiv);
         });
       }
     }
@@ -138,8 +155,6 @@
 
       //array of things like "clenched-jaw"
       selections.sensations = checked.map(cb => cb.value);
-      //array of same sensations, but without the dash ("clenched jaw")
-      // selections.sensationText = new Set(checked.map(cb => cb.parentElement.textContent.trim()));
 
       let matchedEmotions = new Set(selections.sensations.map(sensation => sensationEmotions[sensation]));
       step1.classList.add('hidden');
@@ -175,8 +190,13 @@
 
       emotionContainer.appendChild(createTextElement('h3', 'I feel...'));
       if (!Array.isArray(selections.nuanced[emotion])) selections.nuanced[emotion] = [];
+
+      const nuancedGroupDiv = document.createElement('div');
+      nuancedGroupDiv.className = 'checkbox-group';
+      emotionContainer.appendChild(nuancedGroupDiv);
+
       currentEmotionData.nuancedEmotions.forEach(nuEmotion => {
-        const cb = createCheckbox(nuEmotion, nuEmotion, emotionContainer);
+        const cb = createCheckbox(nuEmotion, nuancedGroupDiv);
         cb.dataset.type = 'nuanced';
         cb.dataset.emotion = emotion;
         if (selections.nuanced[emotion].includes(nuEmotion)) cb.checked = true;
@@ -186,8 +206,9 @@
 
       emotionContainer.appendChild(createTextElement('h3', `I need ${currentEmotionData.coreNeed} and will try...`));
       if (!Array.isArray(selections.needs[emotion])) selections.needs[emotion] = [];
+
       currentEmotionData.nuancedNeeds.forEach(nuNeed => {
-        const cb = createCheckbox(nuNeed, nuNeed, emotionContainer);
+        const cb = createCheckbox(nuNeed, emotionContainer, true);
         cb.dataset.type = 'need';
         cb.dataset.emotion = emotion;
         if (selections.needs[emotion].includes(nuNeed)) cb.checked = true;
@@ -237,11 +258,13 @@
         summaryContainer.appendChild(createTextElement('h4',`I notice ${sensedLabels.join(', ')}`));
 
         summaryContainer.appendChild(createTextElement('h4',`I feel ${selections.nuanced[emotion].join(', ')}`));
+
         summaryContainer.appendChild(createTextElement('h4',`I need ${emotionData[emotion].coreNeed}`));
+
         const selectedNeeds = selections.needs[emotion];
         if (selectedNeeds.length > 0) {
           selectedNeeds.forEach(need => {
-            createCheckbox(need, need, summaryContainer)
+            createCheckbox(need, summaryContainer, true)
           });
         } else {
           summaryContainer.appendChild(createTextElement('p', "No needs selected."));
